frame/support/test/tests/construct_runtime_ui/empty_pallet_path.stderr
error: expected one of: `crate`, `self`, `super`, identifier
 --> $DIR/empty_pallet_path.rs:9:11
  |
9 |         system: ,
  |                 ^
